Add `positive_score_impact` support for `rank_features` (#2725) (#2968)
Adds positive_score_impact support for rank_features field mapper.

Signed-off-by: Yevhen Tienkaiev <hronom@gmail.com>
(cherry picked from commit d8c815c6be80d592cf22f4a1c5060c2ca1857c2a)

Co-authored-by: Yevhen Tienkaiev <hronom@gmail.com>